set gamescreen at the middle with css

--- a/game/src/css/game.css
+++ b/game/src/css/game.css
@@ -3,3 +3,11 @@
 * {
   font-family: "Pixelify Sans", sans-serif;
 }
+
+body {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+}
