--- a/game/src/css/game.css
+++ b/game/src/css/game.css
@@ -11,3 +11,18 @@ body {
   align-items: center;
   background-color: #000;
 }
+
+#input-form {
+  bottom: 250px;
+  position: absolute;
+}
+
+#input-form input {
+  background-color: black;
+  color: white;
+  padding: 5px;
+  font-size: 20px;
+  width: 250px;
+  caret-color: transparent;
+  text-align: center;
+}
