--- a/game/src/css/game.css
+++ b/game/src/css/game.css
@@ -9,22 +9,25 @@ body {
   background-color: #000;
 }
 
-#game-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
 #playerNameInput {
   position: absolute;
-  bottom: 80px;
+  bottom: 90px;
   left: 50%;
+  border: 1px solid #f27ca4;
   transform: translateX(-50%);
-  background-color: black;
-  color: white;
+  background-color: #3b1844;
+  color: #ffffff;
   padding: 5px;
   font-size: 20px;
   width: 250px;
-  caret-color: transparent;
+  caret-color: #fff;
   text-align: center;
+  box-shadow: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+#playerNameInput:focus {
+  outline: none;
+  box-shadow: none;
 }
